# Qt

./: .gitignore
Custom/CustomEditor/: readme.md
Custom/CustomEditor/CustomEditor/: CustomEditor.pro  Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  main.cpp  res.qrc
Custom/CustomSetting/: readme.md
Custom/CustomSetting/CustomSetting/: CustomSetting.pro  OptionDialog.cpp  OptionDialog.h  Utilities.cpp  Utilities.h  main.cpp  res.qrc
Custom/CutomEditor/: readme.md
Custom/CutomEditor/CutomEditor/: CutomEditor.pro  Editor.cpp  MainWindow.cpp  MainWindow.h  main.cpp
Study/Qt5_develop_ex/: readme.md
Study/Qt_5.9/part11_database/: readme.md
Study/Qt_5.9/part12_plugin/: readme.md
Study/Qt_5.9/part12_plugin/QwBatteryPlugin/: CMakeLists.txt  QwBatteryPlugin.json.in  README.md  qwbatteryplugin.cpp  qwbatteryplugin.h  qwbatteryplugin_global.h  qwbatterypluginconstants.h
Study/Qt_5.9/part12_plugin/QwBatteryPlugin/.github/workflows/: build_cmake.yml
Study/Qt_5.9/part13_thread/: readme.md
Study/Qt_5.9/part14_network/: readme.md
Study/Qt_5.9/part15_media/: readme.md
Study/Qt_5.9/part16_aux/: readme.md
Study/Qt_5.9/part2_ui/: part2.md
Study/Qt_5.9/part4_contril_base/: readme.md
Study/Qt_5.9/part5_modelViewDelegate/: readme.md
Study/Qt_5.9/part7_file/: readme.md
Study/Qt_5.9/part8_paint/: readme.md
Study/Qt_5.9/part9_chart/: readme.md
Study/thirdPlugin/QtWaitingSpinner-master/: main.cpp
Test/Multi2/MultiP1/: MultiP1.pro
Test/Multi2/lib/: CMP1.exp
Test/TestEditor/: readme.md
thirdPlugin/QtWaitingSpinner-master/: qtwaitingspinner.pro
(+1664 files in other folders)
